--- a/app/views/links/_fields.html.erb
+++ b/app/views/links/_fields.html.erb
@@ -3,8 +3,7 @@
   <%= f.input :description %>
   <%= f.input :url %>
   <%= f.input :year %>
-  <label for="photo">Photo</label>
-  <%= render 'shared/photo_uploader', f: f %>
+  <%= render 'shared/photo_uploader', f: f, show_label: true %>
 </div>
 <div class="border-bottom-light-gray mb-3"></div>
 <div class="p-3">
