get click to show border as expected

--- a/app/assets/stylesheets/design_toolbox/_input.scss
+++ b/app/assets/stylesheets/design_toolbox/_input.scss
@@ -48,5 +48,9 @@ select {
       border: none;
       display: none;
     }
+    &:focus, &:active{
+      @extend .shadow-box-dark;
+      @extend .border-light-blue;
+    }
   }
 }
