include photo uploader partial in other forms

--- a/app/views/shared/_photo_uploader.html.erb
+++ b/app/views/shared/_photo_uploader.html.erb
@@ -1,4 +1,4 @@
-<%= f.label :photo if show_label %>
-<div class="file-input">
-  <%= f.input :photo, label: '+' %>
+<%= f.label field if show_label %>
+<div class="file-input mb-2">
+  <%= f.input field, label: '+' %>
 </div>
