--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -5,7 +5,7 @@
   </div>
   <h2>Banner Content</h2>
   <div class="p-3">
-    <%= f.input :video %>
+    <%= render 'shared/photo_uploader', f: f, field: :video, show_label: true %>
     <%= f.input :quotation %>
     <%= f.input :quotation_caption %>
   </div>
