add color scheme buttons

--- a/app/assets/stylesheets/design_toolbox/_color.scss
+++ b/app/assets/stylesheets/design_toolbox/_color.scss
@@ -15,6 +15,9 @@
   &-pink{
     color: $pink;
   }
+  &-gold{
+    color: $gold;
+  }
   &-blue-gradient{
     background: $blue-gradient;
     -webkit-background-clip: text;
@@ -48,6 +51,9 @@
   }
   &-pink{
     background-color: $pink;
+  }
+  &-gold{
+    background-color: $gold;
   }
   &-blue-gradient{
     background: $blue-gradient;
