--- a/app/assets/stylesheets/design_toolbox/_border.scss
+++ b/app/assets/stylesheets/design_toolbox/_border.scss
@@ -11,6 +11,15 @@
   }
   &-dark-blue{
     border: 1px solid $dark-blue;
+    &-very-thick{
+      border: 5px solid $dark-blue;
+    }
+  }
+  &-white{
+    border: 1px solid $white;
+    &-very-thick{
+      border: 5px solid $white;
+    }
   }
   &-bottom{
     &-light-gray{
