--- a/app/views/artists/_header.html.erb
+++ b/app/views/artists/_header.html.erb
@@ -15,13 +15,13 @@
         <div class="color-strip bg-beige"></div>
         <div class="color-strip bg-dark-blue"></div>
       </div>
-      <div class="stim-select-button p-0" data-select-value="2" data-action="click->select#update" data-target='select.button' role="button">
+      <div class="stim-select-button p-0" data-select-value="3" data-action="click->select#update" data-target='select.button' role="button">
         <div class="color-strip bg-dark-blue"></div>
         <div class="color-strip bg-white"></div>
         <div class="color-strip bg-beige"></div>
         <div class="color-strip bg-gold"></div>
       </div>
-      <%= f.input :color_palette, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.source' } %>
+      <%= f.input :color_palette, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.input' } %>
     </div>
     <%= f.input :shape, collection: {"Plain" => 'plain', "Angular" => 'angular', "Curved" => 'curved'} %>
   </div>
