--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -1,7 +1,22 @@
 <%= simple_form_for artist, remote: true do |f| %>
   <h2>Layout Style</h2>
   <div class="p-3">
-    <%= f.input :layout, collection: [1, 2, 3] %>
+    <%= f.label :layout %>
+    <div class="stim-select mb-2" data-controller="select">
+      <div class="stim-select-button p-0" data-select-value="1" data-action="click->select#update" data-target='select.button' role="button" title="1">
+        <div class="stim-select-button-text c-dark-blue">1</div>
+        <div class="color-strip-full bg-pink"></div>
+      </div>
+      <div class="stim-select-button p-0" data-select-value="2" data-action="click->select#update" data-target='select.button' role="button" title="2">
+        <div class="stim-select-button-text c-dark-blue">2</div>
+        <div class="color-strip-full bg-pink"></div>
+      </div>
+      <div class="stim-select-button p-0" data-select-value="3" data-action="click->select#update" data-target='select.button' role="button" title="3">
+        <div class="stim-select-button-text c-dark-blue">3</div>
+        <div class="color-strip-full bg-pink"></div>
+      </div>
+      <%= f.input :layout, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.input' } %>
+    </div>
   </div>
   <h2>Banner Content</h2>
   <div class="p-3">
