--- a/app/views/artists/_dashboard.html.erb
+++ b/app/views/artists/_dashboard.html.erb
@@ -15,6 +15,8 @@
         <%= render 'links', artist: artist %>
       <% when :upcoming_projects %>
         <%= render 'upcoming_projects', artist: artist %>
+      <% else %>
+        <%= render 'header', artist: artist %>
       <% end %>
     </div>
   </div>
