add hidden fields for stages

--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -40,6 +40,7 @@
   </div>
   <div class="border-bottom-light-gray mb-3"></div>
   <div class="p-3">
+    <%= hidden_field_tag(:stage, 'layout') %>
     <%= f.button :submit, "Save" %>
   </div>
 <% end %>
