--- a/app/views/artists/_header.html.erb
+++ b/app/views/artists/_header.html.erb
@@ -48,6 +48,7 @@
   </div>
   <div class="border-bottom-light-gray mb-3"></div>
   <div class="p-3">
+    <%= hidden_field_tag(:stage, 'header') %>
     <%= f.button :submit, "Save" %>
   </div>
 <% end %>
