--- a/app/views/artists/_artworks.html.erb
+++ b/app/views/artists/_artworks.html.erb
@@ -2,7 +2,7 @@
 <div class="p-3">
   <ul class="link-list">
     <% @artist.collections.each do |collection| %>
-      <%= link_to '' do %>
+      <%= link_to edit_collection_path(collection), remote: true do %>
         <li>
           <div class="text">
             <%= collection.name %>
