fix up small styling issue with border and button placement

--- a/app/assets/stylesheets/components/_form_panel.scss
+++ b/app/assets/stylesheets/components/_form_panel.scss
@@ -11,7 +11,7 @@
     @extend .border-top-light-gray;
     @extend .m-0;
     font-size: 1rem;
-    &:first-of-type{
+    &:first-of-type:not(.border-top-light-gray){
       border-top: none !important;
     }
   }
