--- a/app/views/collections/_fields.html.erb
+++ b/app/views/collections/_fields.html.erb
@@ -1,7 +1,9 @@
 <div class="p-3">
   <%= f.input :name %>
 </div>
-<div class="border-bottom-light-gray mb-3"></div>
-<div class="p-3">
-  <%= f.button :submit, "Save" %>
-</div>
+<% unless local_assigns[:hide_submit] %>
+  <div class="border-bottom-light-gray mb-3"></div>
+  <div class="p-3">
+    <%= f.button :submit, "Save" %>
+  </div>
+<% end %>
