--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -20,7 +20,7 @@
   </div>
   <h2>Banner Content</h2>
   <div class="p-3">
-    <%= render 'shared/photo_uploader', f: f, field: :video, show_label: true %>
+    <%= render 'shared/video_uploader', f: f %>
     <%= f.input :quotation %>
     <%= f.input :quotation_caption %>
   </div>
