add photo preview to uploader

--- a/app/views/artworks/_fields.html.erb
+++ b/app/views/artworks/_fields.html.erb
@@ -31,6 +31,13 @@
   <%= f.input :year %>
   <%= f.input :price, label: "Price (optional)" %>
 </div>
+<h2 class="border-top-light-gray">Photos</h2>
+<div class="p-3 multiple-upload">
+  <%= f.fields_for :photos do |photo| %>
+    <%= render 'photo_fields', f: photo %>
+  <% end%>
+  <%= link_to_add_association '+ Add photo', f, :photos, class: 'button-tertiary w-100' %>
+</div>
 <div class="border-bottom-light-gray mb-3"></div>
 <div class="p-3">
   <%= f.button :submit, "Save" %>
