--- a/app/views/artists/_header.html.erb
+++ b/app/views/artists/_header.html.erb
@@ -41,7 +41,7 @@
   </div>
   <h2>Content</h2>
   <div class="p-3">
-    <%= render 'shared/photo_uploader', f: f, field: :photo, show_label: true %>
+    <%= render 'shared/photo_uploader', f: f, field: :photo, show_label: true, original_photo: @artist.photo %>
     <%= f.input :super_title %>
     <%= f.input :title %>
     <%= f.input :description %>
