--- a/app/views/shared/_video_uploader.html.erb
+++ b/app/views/shared/_video_uploader.html.erb
@@ -1,4 +1,4 @@
-<% field = :video unless local_assigns.has_key? :video %>
+<% field = :video unless local_assigns.has_key? :field %>
 <% label = 'Video (Vimeo or YouTube)' unless local_assigns.has_key? :label %>
 
 <div class='video-uploader' data-controller="video-uploader">
