--- a/app/views/artworks/_fields.html.erb
+++ b/app/views/artworks/_fields.html.erb
@@ -31,12 +31,26 @@
   <%= f.input :year %>
   <%= f.input :price, label: "Price (optional)" %>
 </div>
-<h2 class="border-top-light-gray">Photos</h2>
+<h2 class="border-top-light-gray mb-3">Photos</h2>
 <div class="p-3 multiple-upload">
-  <%= f.fields_for :photos do |photo| %>
-    <%= render 'photo_fields', f: photo %>
+  <% count = 0 %>
+  <%= f.simple_fields_for :photos do |photo| %>
+    <% original_photo = count <= @artwork.photos.length ? @artwork.photos[count].attachment : nil %>
+    <%= render 'photo_fields', f: photo, original_photo: original_photo %>
+    <% count += 1 %>
+  <% end %>
+  <div class="links">
+    <%= link_to_add_association '+ Add photo', f, :photos, class: 'button-tertiary w-100' %>
+  </div>
+</div>
+<h2 class="border-top-light-gray">Videos</h2>
+<div class="p-3 multiple-upload">
+  <%= f.simple_fields_for :videos do |video| %>
+    <%= render 'video_fields', f: video %>
   <% end%>
-  <%= link_to_add_association '+ Add photo', f, :photos, class: 'button-tertiary w-100' %>
+  <div class="links">
+    <%= link_to_add_association '+ Add video', f, :videos, class: 'button-tertiary w-100' %>
+  </div>
 </div>
 <div class="border-bottom-light-gray mb-3"></div>
 <div class="p-3">
