--- a/app/views/artworks/_photo_fields.html.erb
+++ b/app/views/artworks/_photo_fields.html.erb
@@ -1,5 +1,5 @@
 <% original_photo = nil unless local_assigns.has_key? :original_photo %>
-<div class="nested-fields cursor-move">
+<div class="nested-fields cursor-move col-6 col-sm-4">
   <%= link_to_remove_association "-", f, class: 'photo-uploader-remove' %>
     <%= render 'shared/photo_uploader', f: f, show_label: false, field: :attachment, multiple: true, original_photo: original_photo %>
   <%= f.input :position, as: :hidden %>
