--- a/app/views/upcoming_projects/_fields.html.erb
+++ b/app/views/upcoming_projects/_fields.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :description %>
   <%= f.input :location %>
   <%= f.input :date %>
-  <%= render 'shared/photo_uploader', f: f, field: :photo, show_label: true %>
+  <%= render 'shared/photo_uploader', f: f, field: :photo, show_label: true, original_photo: @upcoming_project.photo %>
 </div>
 <div class="border-bottom-light-gray mb-3"></div>
 <div class="p-3">
