--- a/app/assets/stylesheets/design_toolbox/_color.scss
+++ b/app/assets/stylesheets/design_toolbox/_color.scss
@@ -39,24 +39,41 @@
 .background, .bg{
   &-dark-blue{
     background-color: $dark-blue;
+    &-gradient{
+      background: $dark-blue-gradient;
+      background-color: $dark-blue;
+    }
   }
   &-blue{
     background-color: $blue;
+    &-gradient{
+      background: $blue-gradient;
+      background-color: $blue;
+    }
   }
   &-light-blue{
     background-color: $light-blue;
   }
   &-beige{
     background-color: $beige;
+    &-gradient{
+      background: $beige-gradient;
+      background-color: $beige;
+    }
   }
   &-pink{
     background-color: $pink;
+    &-gradient{
+      background: $pink-gradient;
+      background-color: $pink;
+    }
   }
   &-gold{
     background-color: $gold;
-  }
-  &-blue-gradient{
-    background: $blue-gradient;
+    &-gradient{
+      background: $gold-gradient;
+      background-color: $gold;
+    }
   }
   &-gray{
     background-color: $gray;
