--- a/app/views/shared/_banner.html.slim
+++ b/app/views/shared/_banner.html.slim
@@ -9,7 +9,7 @@
             = title
           h1.color.c-white
             | Welcome to Artyque 
-          p
+          p.shadow
             | As an Agency we will assist artists to accelerate their career, as a digital platform, we will provide a tool for galleries to connect and facilitate their workflow and as an advisor, we will turn the new collectors into wise tastemakers.
           = link_to button[:label], button[:path], class: "button-primary"
         .shadow.sb-light.background.bg-dark-blue.image-lockup.col-12.col-sm-6
