--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -28,6 +28,14 @@
       		padding-left: 50px;
       		max-width: 95%;
 		}
+    &.banner-small{
+      height: calc(60vh - #{$header-height});
+      @include media-breakpoint-up(sm) {
+        height: 60vh;
+        padding-left: 50px;
+        max-width: 95%;
+      }
+    }
 	}
 	.banner-card-subtitle {	
 	    bottom: 0;
@@ -41,7 +49,7 @@
 		padding: 100px 10%;
     	padding-bottom: 43px;
     	z-index: 2000;
-    	p {
+    	p.shadow {
     		text-shadow: 0px 0px 9px #192e3d;
     	}
       @include media-breakpoint-up(sm) {
