--- a/app/views/artists/_quotation.html.slim
+++ b/app/views/artists/_quotation.html.slim
@@ -4,4 +4,4 @@ div class=['quotation', cp(palette, 2, :bg)]
       = quotation
   p class=cp(palette, 3, :fg)
     cite
-      = caption
+      | -&nbsp;#{caption}
