--- a/app/views/artists/_quotation.html.slim
+++ b/app/views/artists/_quotation.html.slim
@@ -1,4 +1,4 @@
-div class=['quotation', cp(palette, 2, :bg)]
+div class=['quotation', cp(palette, 2, :bg)] id="quotation"
   p class=cp(palette, 4, :fg)
     q
       = quotation
