more banner fixes

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,7 +9,7 @@ $light-blue: #0081A2;
 $beige: #FEF0E7;
 $beige-gradient: linear-gradient(67.97deg, #EDDFD6 3.78%, #FEF0E7 112.76%);
 $pink: #DDCDCA;
-$pink-gradient: linear-gradient(67.97deg, #1C505F 3.78%, #DDCDCA 112.76%);
+$pink-gradient: linear-gradient(67.97deg, #EEDEDB 3.78%, #DDCDCA 112.76%);
 $gray: #0E0000;
 $light-gray: #D0D0D0;
 $white: white;
