--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -1,5 +1,4 @@
 == render 'banner', artist: @artist, palette: @palette
 - if @artist.quotation.present? || @artist.quotation_caption.present?
   == render 'quotation', quotation: @artist.quotation, caption: @artist.quotation_caption, palette: @palette
-.circle-container
-  .circle.bg-beige-gradient
+.ellipse
