introduce video helper and generate banner of video as selected by user :)

--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -1,4 +1,6 @@
 == render 'banner', artist: @artist, palette: @palette
 - if @artist.quotation.present? || @artist.quotation_caption.present?
   == render 'quotation', quotation: @artist.quotation, caption: @artist.quotation_caption, palette: @palette
+- if @artist.video.present?
+  == render 'video_banner', video: @artist.video
 .ellipse
