--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -4,3 +4,7 @@
 - if @artist.video.present?
   == render 'video_banner', video: @artist.video
 .ellipse
+.container#content
+  - case @artist.layout
+  - when 1 
+    == render 'layout_1', artist: @artist
