start building stimulus modal

--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -1,3 +1,6 @@
 .row#description
   .col-12
-    == md @artist.about_me
+    == md artist.about_me
+    p
+      em
+        = link_to 'See Full Profile >', artist_path(artist), 'data-action': 'modal#update'
