--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'application', media: 'all'
     / Google Analytics
-    script async src="https://www.googletagmanager.com/gtag/js?id=UA-142247307-1" /
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142247307-1">
     javascript:
      window.dataLayer = window.dataLayer || [];
      function gtag(){dataLayer.push(arguments);}
