get stim modal to display white overlay

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,6 +15,7 @@
 @import "form_panel";
 @import "link_list";
 @import "stim_select";
+@import "stim_modal";
 @import 'video';
 @import "quotation";
 @import "video_banner";
