--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -9,5 +9,6 @@ div id="content" data-controller="modal"
     - case @artist.layout
     - when 1 
       == render 'layout_1', artist: @artist
-  div class="stim-modal" data-target='modal.modal'
+  div class="stim-modal d-none" data-target='modal.modal'
     div class='stim-modal-content' data-target='modal.content'
+  div class="stim-modal-backdrop d-none" data-target='modal.backdrop' data-action='click->modal#hide'
