--- a/app/assets/stylesheets/components/_stim_modal.scss
+++ b/app/assets/stylesheets/components/_stim_modal.scss
@@ -6,6 +6,42 @@
   width: 100vw;
   height: 100vh;
   background-color: white;
-  opacity: 0.5;
+  opacity: 0.35;
   backdrop-filter: blur(3px);
+}
+
+.stim-modal{
+  width: 60ch;
+  max-width: 100%;
+
+  height: calc(1.5rem * 15);
+  max-height: 100%;
+
+  position: fixed;
+
+  z-index: 20500;
+
+  left: 50%;
+  top: 50%;
+
+  @extend .bg-white;
+  @extend .shadow-box-dark;
+  @extend .border-radius;
+
+  /* Use this for centering if unknown width/height */
+  transform: translate(-50%, -50%);
+  .stim-modal-container{
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     overflow: auto;
+     @extend .p-5;
+  }
+  .stim-modal-close-button{
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+  }
 }
