get stim-modal working omgggggg

--- a/app/assets/stylesheets/components/_stim_modal.scss
+++ b/app/assets/stylesheets/components/_stim_modal.scss
@@ -27,6 +27,7 @@
   @extend .bg-white;
   @extend .shadow-box-dark;
   @extend .border-radius;
+  @extend .border;
 
   /* Use this for centering if unknown width/height */
   transform: translate(-50%, -50%);
