--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -3,4 +3,4 @@
     == md artist.about_me
     p
       em
-        = link_to 'See Full Profile >', resume_artist_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link'
+        = link_to 'See Full Profile >', artist_resume_blocks_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link'
