--- a/app/assets/stylesheets/components/_stim_modal.scss
+++ b/app/assets/stylesheets/components/_stim_modal.scss
@@ -11,11 +11,12 @@
 }
 
 .stim-modal{
-  width: 60ch;
-  max-width: 100%;
+  min-width: 60ch;
+  width: 80vw;
+  max-width: 100vw;
 
-  height: calc(1.5rem * 15);
-  max-height: 100%;
+  min-height: calc(1.5rem * 18);
+  max-height: 100vh;
 
   position: fixed;
 
@@ -39,10 +40,12 @@
      height: 100%;
      overflow: auto;
      @extend .p-5;
+     @extend .scroll-smooth;
+     @include make-container; // Rows can go directly inside :)
   }
   .stim-modal-close-button{
-    position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
+    position: fixed;
+    right: 1rem;
+    top: 1rem;
   }
 }
