--- a/app/views/collections/_edit.html.slim
+++ b/app/views/collections/_edit.html.slim
@@ -8,14 +8,17 @@ h2
     | Artworks
   #artworks.p-3
     ul.link-list
-      - collection.artworks.each do |artwork|
-        = link_to edit_artwork_path(artwork), remote: true do
-          li
-            .text
-              = artwork.name
-            .image
-              - if artwork.photos.present?
-                = cl_image_tag artwork.photos.first.attachment
-      = link_to '+ Add artwork', new_collection_artwork_path(collection), remote: true, class: 'button-tertiary w-100'
+      .artwork-fields
+        = f.simple_fields_for :artworks do |artwork_form|
+          .nested-fields
+            = artwork_form.input :position, as: :hidden
+            = link_to edit_artwork_path(artwork_form.object), remote: true do
+              li
+                .text
+                  = artwork_form.object.name
+                .image
+                  - if artwork_form.object.photos.present?
+                    = cl_image_tag artwork_form.object.photos.first.attachment
+        = link_to '+ Add artwork', new_collection_artwork_path(collection), remote: true, class: 'button-tertiary w-100'
   #submit.p-3
     = f.button :submit, "Save"
