allow reordering on upcoming projects and links too 🏪

--- a/app/views/artists/_upcoming_projects.html.slim
+++ b/app/views/artists/_upcoming_projects.html.slim
@@ -1,14 +1,21 @@
 h2
   | Projects
-.p-3
-  ul.link-list
-    - @artist.upcoming_projects.each do |upcoming_project|
-      = link_to edit_upcoming_project_path(upcoming_project), remote: true do
-        li
-          .text
-            = upcoming_project.title
-          .image
-            - if upcoming_project.photo.present?
-              = cl_image_tag upcoming_project.photo
-.p-3
-  = link_to '+ Add upcoming project', new_artist_upcoming_project_path(@artist), remote: true, class: 'button-tertiary w-100'
+= simple_form_for @artist, remote: true do |f|
+  = hidden_field_tag(:stage, 'upcoming_projects')
+  .p-3
+    ul.link-list
+      .upcoming-project-fields
+        = f.simple_fields_for :upcoming_projects do |upcoming_project_form|
+          .nested-fields
+            = upcoming_project_form.input :position, as: :hidden
+            = link_to edit_upcoming_project_path(upcoming_project_form.object), remote: true do
+              li
+                .text
+                  = upcoming_project_form.object.title
+                .image
+                  - if upcoming_project_form.object.photo.present?
+                    = cl_image_tag upcoming_project_form.object.photo
+  .p-3
+    = link_to '+ Add upcoming project', new_artist_upcoming_project_path(@artist), remote: true, class: 'button-tertiary w-100'
+  .p-3
+    = f.submit "Save Order"
